// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GcpScheduledJobsPanel Renders when not visible 1`] = `
<div
  className="panel_f16v76lc"
>
  <div
    className="headerContainer_f1tsf7lg"
  >
    <header
      className="header_f18piyjt"
    >
      Notebook Executor
       
      <Badge
        value="experimental"
      />
    </header>
    <WithStyles(ForwardRef(IconButton))
      onClick={[Function]}
      title="Refresh"
    >
      <WithStyles(RefreshIcon) />
    </WithStyles(ForwardRef(IconButton))>
  </div>
  <WithStyles(WithStyles(ForwardRef(Tabs)))
    indicatorColor="primary"
    onChange={[Function]}
    value={0}
    variant="fullWidth"
  >
    <WithStyles(WithStyles(ForwardRef(Tab)))
      label="Executions"
    />
    <WithStyles(WithStyles(ForwardRef(Tab)))
      label="Schedules"
    />
  </WithStyles(WithStyles(ForwardRef(Tabs)))>
  <div
    className="tab_fmo9343"
    hidden={false}
    role="tabpanel"
  >
    <ul
      className="list_f4xafb6"
    />
  </div>
  <div
    className="tab_fmo9343"
    hidden={true}
    role="tabpanel"
  >
    <ul
      className="list_f4xafb6"
    />
  </div>
  <footer
    className="pagination_f1qcvoow"
  >
    <WithStyles(WithStyles(ForwardRef(TablePagination)))
      SelectProps={
        Object {
          "variant": "outlined",
        }
      }
      count={-1}
      labelDisplayedRows={[Function]}
      labelRowsPerPage="Items per page:"
      nextIconButtonProps={
        Object {
          "disabled": true,
        }
      }
      onChangePage={[Function]}
      onChangeRowsPerPage={[Function]}
      page={0}
      rowsPerPage={10}
    />
  </footer>
</div>
`;

exports[`GcpScheduledJobsPanel Shows error if executions cannot be retrieved 1`] = `
<div
  className="panel_f16v76lc"
>
  <div
    className="headerContainer_f1tsf7lg"
  >
    <header
      className="header_f18piyjt"
    >
      Notebook Executor
       
      <Badge
        value="experimental"
      />
    </header>
    <WithStyles(ForwardRef(IconButton))
      onClick={[Function]}
      title="Refresh"
    >
      <WithStyles(RefreshIcon) />
    </WithStyles(ForwardRef(IconButton))>
  </div>
  <WithStyles(WithStyles(ForwardRef(Tabs)))
    indicatorColor="primary"
    onChange={[Function]}
    value={0}
    variant="fullWidth"
  >
    <WithStyles(WithStyles(ForwardRef(Tab)))
      label="Executions"
    />
    <WithStyles(WithStyles(ForwardRef(Tab)))
      label="Schedules"
    />
  </WithStyles(WithStyles(ForwardRef(Tabs)))>
  <div
    className="tab_fmo9343"
    hidden={false}
    role="tabpanel"
  >
    <Message
      asError={true}
      text="Cannot retrieve executions: Unable to retrieve executions"
    />
  </div>
  <div
    className="tab_fmo9343"
    hidden={true}
    role="tabpanel"
  >
    <ul
      className="list_f4xafb6"
    />
  </div>
</div>
`;

exports[`GcpScheduledJobsPanel Shows error if project cannot be determined 1`] = `
<div
  className="panel_f16v76lc"
>
  <div
    className="headerContainer_f1tsf7lg"
  >
    <header
      className="header_f18piyjt"
    >
      Notebook Executor
       
      <Badge
        value="experimental"
      />
    </header>
    <WithStyles(ForwardRef(IconButton))
      onClick={[Function]}
      title="Refresh"
    >
      <WithStyles(RefreshIcon) />
    </WithStyles(ForwardRef(IconButton))>
  </div>
  <WithStyles(WithStyles(ForwardRef(Tabs)))
    indicatorColor="primary"
    onChange={[Function]}
    value={0}
    variant="fullWidth"
  >
    <WithStyles(WithStyles(ForwardRef(Tab)))
      label="Executions"
    />
    <WithStyles(WithStyles(ForwardRef(Tab)))
      label="Schedules"
    />
  </WithStyles(WithStyles(ForwardRef(Tabs)))>
  <div
    className="tab_fmo9343"
    hidden={false}
    role="tabpanel"
  >
    <Message
      asError={true}
      text="No project: Unable to determine GCP project"
    />
  </div>
  <div
    className="tab_fmo9343"
    hidden={true}
    role="tabpanel"
  >
    <Message
      asError={true}
      text="No project: Unable to determine GCP project"
    />
  </div>
</div>
`;

exports[`GcpScheduledJobsPanel Shows error if schedules cannot be retrieved 1`] = `
<div
  className="panel_f16v76lc"
>
  <div
    className="headerContainer_f1tsf7lg"
  >
    <header
      className="header_f18piyjt"
    >
      Notebook Executor
       
      <Badge
        value="experimental"
      />
    </header>
    <WithStyles(ForwardRef(IconButton))
      onClick={[Function]}
      title="Refresh"
    >
      <WithStyles(RefreshIcon) />
    </WithStyles(ForwardRef(IconButton))>
  </div>
  <WithStyles(WithStyles(ForwardRef(Tabs)))
    indicatorColor="primary"
    onChange={[Function]}
    value={1}
    variant="fullWidth"
  >
    <WithStyles(WithStyles(ForwardRef(Tab)))
      label="Executions"
    />
    <WithStyles(WithStyles(ForwardRef(Tab)))
      label="Schedules"
    />
  </WithStyles(WithStyles(ForwardRef(Tabs)))>
  <div
    className="tab_fmo9343"
    hidden={true}
    role="tabpanel"
  >
    <WithStyles(ForwardRef(LinearProgress)) />
  </div>
  <div
    className="tab_fmo9343"
    hidden={false}
    role="tabpanel"
  >
    <Message
      asError={true}
      text="Cannot retrieve schedules: Unable to retrieve schedules"
    />
  </div>
</div>
`;

exports[`GcpScheduledJobsPanel Shows executions 1`] = `
<div
  className="panel_f16v76lc"
>
  <div
    className="headerContainer_f1tsf7lg"
  >
    <header
      className="header_f18piyjt"
    >
      Notebook Executor
       
      <Badge
        value="experimental"
      />
    </header>
    <WithStyles(ForwardRef(IconButton))
      onClick={[Function]}
      title="Refresh"
    >
      <WithStyles(RefreshIcon) />
    </WithStyles(ForwardRef(IconButton))>
  </div>
  <WithStyles(WithStyles(ForwardRef(Tabs)))
    indicatorColor="primary"
    onChange={[Function]}
    value={0}
    variant="fullWidth"
  >
    <WithStyles(WithStyles(ForwardRef(Tab)))
      label="Executions"
    />
    <WithStyles(WithStyles(ForwardRef(Tab)))
      label="Schedules"
    />
  </WithStyles(WithStyles(ForwardRef(Tabs)))>
  <div
    className="tab_fmo9343"
    hidden={false}
    role="tabpanel"
  >
    <ul
      className="list_f4xafb6"
    >
      <JobListItem
        gcpService={
          Object {
            "listExecutions": [MockFunction] {
              "calls": Array [
                Array [
                  "",
                  10,
                  undefined,
                ],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": Promise {},
                },
              ],
            },
            "listSchedules": [MockFunction],
            "projectId": Promise {},
          }
        }
        job={
          Object {
            "bucketLink": "bucket",
            "createTime": "2020-05-01T19:00:07Z",
            "downloadLink": "https://storage.cloud.google.com/test-project/notebook_abcd/abcd.ipynb",
            "gcsFile": "test-project/notebook_abcd/abcd.ipynb",
            "id": "notebook_abcd_abcxyz",
            "link": "https://console.cloud.google.com/ai-platform/jobs/notebook_abcd_abcxyz?project=test-project",
            "name": "notebook abcd",
            "state": "SUCCEEDED",
            "timeZone": "UTC",
            "type": "Execution",
            "updateTime": "2020-05-01T19:09:42Z",
            "viewerLink": "https://notebooks.cloud.google.com/view/test-project/notebook_abcd/abcd.ipynb",
          }
        }
        key="notebook_abcd_abcxyz"
      />
      <JobListItem
        gcpService={
          Object {
            "listExecutions": [MockFunction] {
              "calls": Array [
                Array [
                  "",
                  10,
                  undefined,
                ],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": Promise {},
                },
              ],
            },
            "listSchedules": [MockFunction],
            "projectId": Promise {},
          }
        }
        job={
          Object {
            "bucketLink": "bucket",
            "createTime": "2020-05-01T19:00:07Z",
            "downloadLink": "https://storage.cloud.google.com/test-project/notebook_abcd/abcd.ipynb",
            "gcsFile": "test-project/notebook_abcd/abcd.ipynb",
            "id": "notebook_execution2_fghijk",
            "link": "https://console.cloud.google.com/ai-platform/jobs/notebook_abcd_abcxyz?project=test-project",
            "name": "notebook abcd",
            "state": "SUCCEEDED",
            "timeZone": "UTC",
            "type": "Execution",
            "updateTime": "2020-05-01T19:09:42Z",
            "viewerLink": "https://notebooks.cloud.google.com/view/test-project/notebook_abcd/abcd.ipynb",
          }
        }
        key="notebook_execution2_fghijk"
      />
    </ul>
  </div>
  <div
    className="tab_fmo9343"
    hidden={true}
    role="tabpanel"
  >
    <ul
      className="list_f4xafb6"
    />
  </div>
  <footer
    className="pagination_f1qcvoow"
  >
    <WithStyles(WithStyles(ForwardRef(TablePagination)))
      SelectProps={
        Object {
          "variant": "outlined",
        }
      }
      count={-1}
      labelDisplayedRows={[Function]}
      labelRowsPerPage="Items per page:"
      nextIconButtonProps={
        Object {
          "disabled": true,
        }
      }
      onChangePage={[Function]}
      onChangeRowsPerPage={[Function]}
      page={0}
      rowsPerPage={10}
    />
  </footer>
</div>
`;

exports[`GcpScheduledJobsPanel Shows loading indicator 1`] = `
<div
  className="panel_f16v76lc"
>
  <div
    className="headerContainer_f1tsf7lg"
  >
    <header
      className="header_f18piyjt"
    >
      Notebook Executor
       
      <Badge
        value="experimental"
      />
    </header>
    <WithStyles(ForwardRef(IconButton))
      onClick={[Function]}
      title="Refresh"
    >
      <WithStyles(RefreshIcon) />
    </WithStyles(ForwardRef(IconButton))>
  </div>
  <WithStyles(WithStyles(ForwardRef(Tabs)))
    indicatorColor="primary"
    onChange={[Function]}
    value={0}
    variant="fullWidth"
  >
    <WithStyles(WithStyles(ForwardRef(Tab)))
      label="Executions"
    />
    <WithStyles(WithStyles(ForwardRef(Tab)))
      label="Schedules"
    />
  </WithStyles(WithStyles(ForwardRef(Tabs)))>
  <div
    className="tab_fmo9343"
    hidden={false}
    role="tabpanel"
  >
    <WithStyles(ForwardRef(LinearProgress)) />
  </div>
  <div
    className="tab_fmo9343"
    hidden={true}
    role="tabpanel"
  >
    <ul
      className="list_f4xafb6"
    />
  </div>
  <footer
    className="pagination_f1qcvoow"
  >
    <WithStyles(WithStyles(ForwardRef(TablePagination)))
      SelectProps={
        Object {
          "variant": "outlined",
        }
      }
      count={-1}
      labelDisplayedRows={[Function]}
      labelRowsPerPage="Items per page:"
      nextIconButtonProps={
        Object {
          "disabled": true,
        }
      }
      onChangePage={[Function]}
      onChangeRowsPerPage={[Function]}
      page={0}
      rowsPerPage={10}
    />
  </footer>
</div>
`;

exports[`GcpScheduledJobsPanel Shows schedules 1`] = `
<div
  className="panel_f16v76lc"
>
  <div
    className="headerContainer_f1tsf7lg"
  >
    <header
      className="header_f18piyjt"
    >
      Notebook Executor
       
      <Badge
        value="experimental"
      />
    </header>
    <WithStyles(ForwardRef(IconButton))
      onClick={[Function]}
      title="Refresh"
    >
      <WithStyles(RefreshIcon) />
    </WithStyles(ForwardRef(IconButton))>
  </div>
  <WithStyles(WithStyles(ForwardRef(Tabs)))
    indicatorColor="primary"
    onChange={[Function]}
    value={1}
    variant="fullWidth"
  >
    <WithStyles(WithStyles(ForwardRef(Tab)))
      label="Executions"
    />
    <WithStyles(WithStyles(ForwardRef(Tab)))
      label="Schedules"
    />
  </WithStyles(WithStyles(ForwardRef(Tabs)))>
  <div
    className="tab_fmo9343"
    hidden={true}
    role="tabpanel"
  >
    <ul
      className="list_f4xafb6"
    >
      <JobListItem
        gcpService={
          Object {
            "listExecutions": [MockFunction] {
              "calls": Array [
                Array [
                  "",
                  10,
                  undefined,
                ],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": Promise {},
                },
              ],
            },
            "listSchedules": [MockFunction] {
              "calls": Array [
                Array [
                  10,
                  undefined,
                ],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": Promise {},
                },
              ],
            },
            "projectId": Promise {},
          }
        }
        job={
          Object {
            "bucketLink": "bucket",
            "createTime": "2020-05-01T19:00:07Z",
            "downloadLink": "https://storage.cloud.google.com/test-project/notebook_abcd/abcd.ipynb",
            "gcsFile": "test-project/notebook_abcd/abcd.ipynb",
            "id": "notebook_abcd_abcxyz",
            "link": "https://console.cloud.google.com/ai-platform/jobs/notebook_abcd_abcxyz?project=test-project",
            "name": "notebook abcd",
            "state": "SUCCEEDED",
            "timeZone": "UTC",
            "type": "Execution",
            "updateTime": "2020-05-01T19:09:42Z",
            "viewerLink": "https://notebooks.cloud.google.com/view/test-project/notebook_abcd/abcd.ipynb",
          }
        }
        key="notebook_abcd_abcxyz"
      />
      <JobListItem
        gcpService={
          Object {
            "listExecutions": [MockFunction] {
              "calls": Array [
                Array [
                  "",
                  10,
                  undefined,
                ],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": Promise {},
                },
              ],
            },
            "listSchedules": [MockFunction] {
              "calls": Array [
                Array [
                  10,
                  undefined,
                ],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": Promise {},
                },
              ],
            },
            "projectId": Promise {},
          }
        }
        job={
          Object {
            "bucketLink": "bucket",
            "createTime": "2020-05-01T19:00:07Z",
            "downloadLink": "https://storage.cloud.google.com/test-project/notebook_abcd/abcd.ipynb",
            "gcsFile": "test-project/notebook_abcd/abcd.ipynb",
            "id": "notebook_execution2_fghijk",
            "link": "https://console.cloud.google.com/ai-platform/jobs/notebook_abcd_abcxyz?project=test-project",
            "name": "notebook abcd",
            "state": "SUCCEEDED",
            "timeZone": "UTC",
            "type": "Execution",
            "updateTime": "2020-05-01T19:09:42Z",
            "viewerLink": "https://notebooks.cloud.google.com/view/test-project/notebook_abcd/abcd.ipynb",
          }
        }
        key="notebook_execution2_fghijk"
      />
    </ul>
  </div>
  <div
    className="tab_fmo9343"
    hidden={false}
    role="tabpanel"
  >
    <ul
      className="list_f4xafb6"
    >
      <JobListItem
        gcpService={
          Object {
            "listExecutions": [MockFunction] {
              "calls": Array [
                Array [
                  "",
                  10,
                  undefined,
                ],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": Promise {},
                },
              ],
            },
            "listSchedules": [MockFunction] {
              "calls": Array [
                Array [
                  10,
                  undefined,
                ],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": Promise {},
                },
              ],
            },
            "projectId": Promise {},
          }
        }
        job={
          Object {
            "createTime": "2020-05-01T19:00:07Z",
            "downloadLink": "https://storage.cloud.google.com/test-project/notebook_abcd/abcd.ipynb",
            "gcsFile": "test-project/notebook_abcd/abcd.ipynb",
            "hasExecutions": true,
            "id": "notebook_abcd_abcxyz",
            "link": "https://console.cloud.google.com/ai-platform/notebooks/schedule-details/notebook_abcd_abcxyz?project=test-project",
            "name": "notebook abcd",
            "schedule": "30 9 */2 * *",
            "state": "SUCCEEDED",
            "timeZone": "UTC",
            "updateTime": "2020-05-01T19:09:42Z",
            "viewerLink": "https://notebooks.cloud.google.com/view/test-project/notebook_abcd/abcd.ipynb",
          }
        }
        key="notebook_abcd_abcxyz"
      />
      <JobListItem
        gcpService={
          Object {
            "listExecutions": [MockFunction] {
              "calls": Array [
                Array [
                  "",
                  10,
                  undefined,
                ],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": Promise {},
                },
              ],
            },
            "listSchedules": [MockFunction] {
              "calls": Array [
                Array [
                  10,
                  undefined,
                ],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": Promise {},
                },
              ],
            },
            "projectId": Promise {},
          }
        }
        job={
          Object {
            "createTime": "2020-05-01T19:00:07Z",
            "downloadLink": "https://storage.cloud.google.com/test-project/notebook_abcd/abcd.ipynb",
            "gcsFile": "test-project/notebook_abcd/abcd.ipynb",
            "hasExecutions": true,
            "id": "notebook_execution2_fghijk",
            "link": "https://console.cloud.google.com/ai-platform/notebooks/schedule-details/notebook_abcd_abcxyz?project=test-project",
            "name": "notebook abcd",
            "schedule": "30 9 */2 * *",
            "state": "SUCCEEDED",
            "timeZone": "UTC",
            "updateTime": "2020-05-01T19:09:42Z",
            "viewerLink": "https://notebooks.cloud.google.com/view/test-project/notebook_abcd/abcd.ipynb",
          }
        }
        key="notebook_execution2_fghijk"
      />
    </ul>
  </div>
  <footer
    className="pagination_f1qcvoow"
  >
    <WithStyles(WithStyles(ForwardRef(TablePagination)))
      SelectProps={
        Object {
          "variant": "outlined",
        }
      }
      count={-1}
      labelDisplayedRows={[Function]}
      labelRowsPerPage="Items per page:"
      nextIconButtonProps={
        Object {
          "disabled": true,
        }
      }
      onChangePage={[Function]}
      onChangeRowsPerPage={[Function]}
      page={0}
      rowsPerPage={10}
    />
  </footer>
</div>
`;
